[package]
name = "aspen"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version = "1.23.0", features = ["derive"]}
futures = {version = "0.3.31", features = ["executor"]}
image = "0.25.6"
nalgebra = "0.33.2"
tobj = {version = "4.0.3", features = ["async"]}
wgpu = "25.0.2"
winit = "0.30.7"
